@@ -1,10 +1,16 @@
+2014-07-22  Michael R. Crusoe <mcrusoe@msu.edu>
+
+    * Makefile: combine pip invocation into single "install-dependencies"
+    target.
+
 2014-07-22  Jeramia Ory <jeramia.ory@gmail.com>
 
     * khmer/_khmermodule.cc: removed unused KhmerError, issue #503
 
 2014-07-22 Leonor Garcia-Gutierrez <l.garcia-gutierrez@warwick.ac.uk>
+
     * reduced memory requirements in test_counting_single.py
-    
+
 2014-07-21  Titus Brown <t@idyll.org>
 
     * sandbox/saturate-by-median.py: introduce new sandbox script for
